ui/src/index.scss
/*
  Copyright 2020 H2O.ai, Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
*/
* {
  // For Firefox
  scrollbar-width: thin;
  scrollbar-color: var(--wave-text2) var(--wave-text0);

  &::-webkit-scrollbar-thumb {
    background-color: var(--wave-text2);
    border-radius: 12px;
    border: 3px solid var(--wave-card8);
  }

  &::-webkit-scrollbar {
    width: 12px;
  }

  &::-webkit-scrollbar-track {
    background: var(--wave-text0);
  }

  &::-webkit-scrollbar-corner {
    background: var(--wave-text0);
  }
}

body {
  margin: 0;
  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
}

body,
#wave-root {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
}

:root {
  /* Base colors. */
  --wave-amber: #ffc107;
  --wave-azure: #03a9f4;
  --wave-blue: #2196f3;
  --wave-brown: #795548;
  --wave-cyan: #00bcd4;
  --wave-gray: #9e9e9e;
  --wave-green: #8bc34a;
  --wave-indigo: #3f51b5;
  --wave-lime: #cddc39;
  --wave-mint: #4caf50;
  --wave-orange: #ff9800;
  --wave-page: #f5f5f5;
  --wave-pink: #e91e63;
  --wave-purple: #9c27b0;
  --wave-red: #f44336;
  --wave-tangerine: #ff5722;
  --wave-teal: #009688;
  --wave-violet: #673ab7;
  --wave-yellow: #ffeb3b;

  /* Text tones. */
  --wave-text: #323130;
  --wave-text0: rgba(50, 49, 48, 0.05);
  --wave-text1: rgba(50, 49, 48, 0.1);
  --wave-text2: rgba(50, 49, 48, 0.2);
  --wave-text3: rgba(50, 49, 48, 0.3);
  --wave-text4: rgba(50, 49, 48, 0.4);
  --wave-text5: rgba(50, 49, 48, 0.5);
  --wave-text6: rgba(50, 49, 48, 0.6);
  --wave-text7: rgba(50, 49, 48, 0.7);
  --wave-text8: rgba(50, 49, 48, 0.8);
  --wave-text9: rgba(50, 49, 48, 0.9);

  /* Primary color tones. */
  --wave-primary: #000000;
  --wave-primary0: rgba(50, 49, 48, 0.05);
  --wave-primary1: rgba(50, 49, 48, 0.1);
  --wave-primary2: rgba(50, 49, 48, 0.2);
  --wave-primary3: rgba(50, 49, 48, 0.3);
  --wave-primary4: rgba(50, 49, 48, 0.4);
  --wave-primary5: rgba(50, 49, 48, 0.5);
  --wave-primary6: rgba(50, 49, 48, 0.6);
  --wave-primary7: rgba(50, 49, 48, 0.7);
  --wave-primary8: rgba(50, 49, 48, 0.8);
  --wave-primary9: rgba(50, 49, 48, 0.9);

  /* Card color tones. */
  --wave-card: #ffffff;
  --wave-card0: rgba(255, 255, 255, 0.05);
  --wave-card1: rgba(255, 255, 255, 0.1);
  --wave-card2: rgba(255, 255, 255, 0.2);
  --wave-card3: rgba(255, 255, 255, 0.3);
  --wave-card4: rgba(255, 255, 255, 0.4);
  --wave-card5: rgba(255, 255, 255, 0.5);
  --wave-card6: rgba(255, 255, 255, 0.6);
  --wave-card7: rgba(255, 255, 255, 0.7);
  --wave-card8: rgba(255, 255, 255, 0.8);
  --wave-card9: rgba(255, 255, 255, 0.9);

  /* Fluent colors. */
  --wave-themePrimary: #000000;
  --wave-themeLighterAlt: #898989;
  --wave-themeLighter: #737373;
  --wave-themeLight: #595959;
  --wave-themeTertiary: #373737;
  --wave-themeSecondary: #2f2f2f;
  --wave-themeDarkAlt: #252525;
  --wave-themeDark: #151515;
  --wave-themeDarker: #0b0b0b;
  --wave-neutralLighterAlt: #faf9f8;
  --wave-neutralLighter: #f3f2f1;
  --wave-neutralLight: #edebe9;
  --wave-neutralQuaternaryAlt: #e1dfdd;
  --wave-neutralQuaternary: #d0d0d0;
  --wave-neutralTertiaryAlt: #c8c6c4;
  --wave-neutralTertiary: #a19f9d;
  --wave-neutralSecondary: #605e5c;
  --wave-neutralPrimaryAlt: #3b3a39;
  --wave-neutralPrimary: #323130;
  --wave-neutralDark: #201f1e;
  --wave-black: #000000;
  --wave-white: #ffffff;

  /* Fluent semantic colors. */
  --wave-errorText: #a4262c;
}

$fontTrackings: (
  6: 0.043,
  7: 0.032,
  8: 0.024,
  9: 0.016,
  10: 0.01,
  11: 0.005,
  12: 0,
  13: -0.0025,
  14: -0.006,
  15: -0.009,
  16: -0.011,
  17: -0.013,
  18: -0.014,
  20: -0.017,
  24: -0.019,
  30: -0.021,
  40: -0.022,
  80: -0.022,
);

// Generate font tracking classes.
@each $size,
$tracking in $fontTrackings {
  .wave-s#{$size} {
    font-size: $size + px;
    letter-spacing: $tracking + em;
    line-height: round(1.4 * $size) + px;
  }
}

// Generate font weight classes.
@for $weight from 1 through 9 {
  .wave-w#{$weight} {
    font-weight: $weight * 100;
  }
}

// Generate color classes.
@for $i from 0 through 9 {
  .wave-t#{$i} {
    color: var(--wave-text#{$i});
  }

  .wave-c#{$i} {
    color: var(--wave-card#{$i});
  }

  .wave-p#{$i} {
    color: var(--wave-primary#{$i});
  }
}

// Used by the Wave logo on empty pages.
.wave-pulse {
  animation: pulsate 1s linear 0s infinite;
}

@keyframes pulsate {
  0% {
    opacity: 0;
  }

  20% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

// Default markdown syntax highlighting theme - androidstudio.
pre code.hljs {
  display: block;
  overflow-x: auto;
  padding: 1em
}

code.hljs {
  padding: 3px 5px
}

.hljs {
  color: #a9b7c6;
  background: #282b2e
}

.hljs-bullet,
.hljs-literal,
.hljs-number,
.hljs-symbol {
  color: #6897bb
}

.hljs-deletion,
.hljs-keyword,
.hljs-selector-tag {
  color: #cc7832
}

.hljs-link,
.hljs-template-variable,
.hljs-variable {
  color: #629755
}

.hljs-comment,
.hljs-quote {
  color: grey
}

.hljs-meta {
  color: #bbb529
}

.hljs-addition,
.hljs-attribute,
.hljs-string {
  color: #6a8759
}

.hljs-section,
.hljs-title,
.hljs-type {
  color: #ffc66d
}

.hljs-name,
.hljs-selector-class,
.hljs-selector-id {
  color: #e8bf6a
}

.hljs-emphasis {
  font-style: italic
}

.hljs-strong {
  font-weight: 700
}

